# get-jsonnet-dependencies

./: README.md  get_jsonnet_dependencies.py  pyproject.toml
