[tool.poetry]
name = "get-jsonnet-dependencies"
version = "0.1.0"
description = "Extracts import dependencies from a Jsonnet file"
authors = ["George Zhang <geetransit@gmail.com>"]
license = "MIT"

[[tool.poetry.packages]]
include = "get_jsonnet_dependencies.py"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
get-jsonnet-dependencies = "get_jsonnet_dependencies:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
